# Airflow

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yaml  init_s3_structure.sh  last_training_metadata.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: airflow.cfg
dags/: config.py  dag_data_ingestion.py  dag_data_ingestion.py.py  dag_monitoring.py  dag_retraining.py
dags/utils/: __init__.py  drift_detection.py
scripts/: generate_reference_features.py
